src/test/deca/syntax/invalid/printlnOuvert.deca
// Description:
//    Paranthèse du print ouverte
//
// Resultats:
//    15:23: missing ')' at ';'


//
// Historique:
//    cree le 11/01/2024


{

println("Sasuke Uchiwa";

}